Search console valdation

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<script src="./js/gmaps.js"></script>
 
     <title>La chouette agence</title>
-
+		<meta name="google-site-verification" content="WqhW8sfMRLdmsS-fwkyKmWJVcj79AAEdW6eJZXZxPYs" />
 
 
 <!-- Analytics -->
