--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attrectives et visibles sur internet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="canonical" href="https://romimatei.github.io/RominaMatei_4_26032021/" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
@@ -42,8 +41,8 @@
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
-								alt="Entreprise web design Lyon logo la meilleure agence web design" height="40" /></a>
+						<a class="navbar-brand" href="#"><img src="img/la-chouette-agence.png"
+								alt="Entreprise web design Lyon logo la meilleure agence web design" width="240" height="45" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse"
 							data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
@@ -56,9 +55,7 @@
 								<a href="#">Accueil</a>
 							</li>
 							<li>
-							</li>
-							<li>
-								<a href="page2.html">page2 &gt;</a>
+								<a href="page2.html">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -251,7 +248,7 @@
 		<!-- bloc-5-cta END -->
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
@@ -279,52 +276,13 @@
 									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
-							<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations,
-								design de site web, site web, web, internet, site internet, site</div>
-						</div>
-						<div class="row">
-							<div class="col-sm-4">
-								Partenaires
-								<ul>
-									<li><a href="voiture.com">voiture.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="matoiture.com">matoiture.com</a></li>
-									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 1
-								<ul>
-									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-									<li><a href="123seoture.com">123seo.com</a></li>
-									<li><a href="123site.com">123site.com</a></li>
-									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com">listeseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								Annuaires liste 2
-								<ul>
-									<li><a href="betterseo.com">betterseo.com</a></li>
-									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-									<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-									<li><a href="liensagogo.com">liensagogo.com</a></li>
-									<li><a href="backlink.com">backlink.com</a></li>
-									<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-								</ul>
-							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
+
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		</footer>
 		<!-- Footer - bloc-8 END -->
 
 	</div>
