--- a/index.html
+++ b/index.html
@@ -3,23 +3,17 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="keywords"
-		content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+	<meta name="keywords" content="seo, google, site web, site internet, agence design Lyon, web design">
 	<meta name="description"
 		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attrectives et visibles sur internet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<link rel="canonical" href="https://romimatei.github.io/RominaMatei_4_26032021/" />
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
 
 	<title>La chouette agence</title>
 	<meta name="google-site-verification" content="WqhW8sfMRLdmsS-fwkyKmWJVcj79AAEdW6eJZXZxPYs" />
@@ -68,7 +62,7 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
 			id="bloc-1-hero">
 			<div class="container bloc-lg">
-				<div class="row tight-width-whitespace">
+				<div class="row">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
 							alt="La chouette agence, agence web paris, création logo paris" />
@@ -145,7 +139,7 @@
 		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
-				<div class="row tight-width-whitespace black-background">
+				<div class="row black-background">
 					<div class="col-sm-12">
 						<h2 class="mg-md text-center tc-white">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès.
@@ -172,7 +166,7 @@
 						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
 					</div>
 				</div>
-				<div class="row tight-width-whitespace portfolio-row">
+				<div class="row portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/journal_local.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
@@ -199,7 +193,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="row tight-width-whitespace portfolio-row">
+				<div class="row portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/voyageur.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
@@ -281,7 +275,12 @@
 				</div>
 			</div>
 
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+			<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+			<script src="./js/bootstrap.min.js"></script>
+			<script src="./js/jquery-2.1.0.min.js"></script>
+			<script src="./js/blocs.min.js"></script>
+			<script src="./js/jquery.touchSwipe.min.js" defer></script>
+			<script src="./js/gmaps.min.js"></script>
 		</footer>
 		<!-- Footer - bloc-8 END -->
 
