--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
 	<meta name="keywords" content="seo, google, site web, site internet, agence design Lyon, web design">
 	<meta name="description"
 		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attrectives et visibles sur internet.">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<link rel="canonical" href="https://romimatei.github.io/RominaMatei_4_26032021/" />
-	<link rel="stylesheet" type="text/css" href="style.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<!-- <link rel="canonical" href="https://romimatei.github.io/RominaMatei_4_26032021/" /> -->
+	<link rel="preload" as="image" href="img/la-chouette-agence-banniere-xs.jpg">
 
+	<link rel="stylesheet" type="text/css" href="style.min.css">
 
 
 	<title>La chouette agence</title>
@@ -252,35 +251,36 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="https://www.facebook.com"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="https://dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="https://www.instagram.com"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 
 			<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-			<script src="./js/bootstrap.min.js"></script>
 			<script src="./js/jquery-2.1.0.min.js"></script>
+			<script src="./js/bootstrap.min.js"></script>
 			<script src="./js/blocs.min.js"></script>
 			<script src="./js/jquery.touchSwipe.min.js" defer></script>
-			<script src="./js/gmaps.min.js"></script>
 		</footer>
 		<!-- Footer - bloc-8 END -->
 
