--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100"
+						<img src="img/logo.png" class="center-block image-resize-mode" width="100" height="100"
 							alt="La chouette agence, agence web paris, création logo paris" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
@@ -251,22 +251,22 @@
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://twitter.com"><span class="fa fa-twitter icon-md"></span></a>
+									<a class="social" href="https://twitter.com" aria-label="partager sur twitter"><span class="fa fa-twitter icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.facebook.com"><span class="fa fa-facebook icon-md"></span></a>
+									<a class="social" href="https://www.facebook.com" aria-label="partager sur facebook"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://dribbble.com"><span class="fa fa-dribbble icon-md"></span></a>
+									<a class="social" href="https://dribbble.com" aria-label="partager sur dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" href="https://www.instagram.com"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" href="https://www.instagram.com" aria-label="partager sur instagram"><span class="fa fa-instagram icon-md"></span></a>
 								</div>
 							</div>
 						</div>
