--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<!-- <link rel="canonical" href="https://romimatei.github.io/RominaMatei_4_26032021/" /> -->
 	<link rel="preload" as="image" href="img/la-chouette-agence-banniere-xs.jpg">
 
-	<link rel="stylesheet" type="text/css" href="style.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 
 	<title>La chouette agence</title>
@@ -248,27 +248,39 @@
 						<p class="text-center white">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
-						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="https://twitter.com" aria-label="partager sur twitter"><span class="fa fa-twitter icon-md"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="https://www.facebook.com" aria-label="partager sur facebook"><span class="fa fa-facebook icon-md"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="https://dribbble.com" aria-label="partager sur dribbble"><span class="fa fa-dribbble icon-md"></span></a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="https://www.instagram.com" aria-label="partager sur instagram"><span class="fa fa-instagram icon-md"></span></a>
-								</div>
-							</div>
+					</div>
+				</div>
+				<div class="row row-no-gutters social-footer">
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://twitter.com" aria-label="partager sur twitter"><span
+									class="fa fa-twitter icon-md"></span>
+								<p class="sr-hiden">Twitter</p>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://www.facebook.com" aria-label="partager sur facebook"><span
+									class="fa fa-facebook icon-md"></span>
+								<p class="sr-hiden">Facebook</p>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://dribbble.com" aria-label="partager sur dribbble"><span
+									class="fa fa-dribbble icon-md"></span>
+								<p class="sr-hiden">Dribbble</p>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="text-center">
+							<a class="social" href="https://www.instagram.com" aria-label="partager sur instagram"><span
+									class="fa fa-instagram icon-md"></span>
+								<p class="sr-hiden">Insagram</p>
+							</a>
 						</div>
 					</div>
 				</div>
