--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
 		<!-- bloc-1-presentation -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax"
 			id="bloc-1-hero">
-			<div class="container bloc-lg">
+			<div class="container bloc-lg opacity-bg">
 				<div class="row">
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100" height="100"
-							alt="La chouette agence, agence web paris, création logo paris" />
+							alt="La chouette agence, agence web Lyon, création logo Lyon" />
 						<h1 class="text-center hero-bloc-text tc-white ">
 							La chouette agence.
 						</h1>
-						<div class="text-center">
+						<div class="text-center btn-contact">
 							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
 								id="cta-hero">Contact</a>
 						</div>
@@ -83,7 +83,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+						<p class="titre">La chouette agence est une agence de web design qui aide les entreprises à devenir attrectives et visibles sur internet.</p>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -91,9 +91,9 @@
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							Web design
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro,
 							laissez-nous vous réaliser un design dont vous serez fier.
@@ -103,9 +103,9 @@
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							&nbsp;Stratégie
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs
 							commerciaux afin de vous proposer le meilleur design possible.<br>
@@ -115,9 +115,9 @@
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">
+						<h2 class="mg-md text-center">
 							Illustrations
-						</h3>
+						</h2>
 						<p class="text-center ">
 							Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux
 							pour donner à vos pages une touche finale d'élégance.
@@ -126,8 +126,11 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+            <p class="titre"><em>"La chouette agence est une execellente agence web !
+							Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à
+						doubler nos ventes en ligne à Lyon."</em><br>
+					Maxime Guibard, PDG de À vos fourchettes
+				 </p>
 					</div>
 				</div>
 			</div>
@@ -137,13 +140,13 @@
 		<!-- bloc-3-what-i-do -->
 		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax"
 			id="bloc-3-what-i-do">
-			<div class="container bloc-lg">
+			<div class="container bloc-lg opacity-bg">
 				<div class="row black-background">
 					<div class="col-sm-12">
-						<h2 class="mg-md text-center tc-white">
+						<h3 class="mg-md text-center tc-white">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès.
 							Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
-						</h2>
+						</h3>
 						<p class="text-center white">
 							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de
 							créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité
@@ -162,7 +165,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+						<p class="titre">Nous travaillons avec beaucoup de clients, voici nos réalisations.</p>
 					</div>
 				</div>
 				<div class="row portfolio-row">
@@ -172,10 +175,10 @@
 								src="img/journal_local.jpg"
 								alt="Entreprise web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
-						<h3 class="mg-md text-center">
+						<h4 class="mg-md text-center titre-xs">
 							Refonte d'un site web pour un journal local
-						</h3>
-						<p class="text-center">
+						</h4>
+						<p class="text-center  p-xs">
 							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 						</p>
 					</div>
@@ -184,10 +187,10 @@
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/photographes.jpg" alt="Entreprise web design à Lyon création site web pour photographes"
 								class="img-responsive portfolio-thumb" /></a>
-						<h3 class="mg-md text-center">
+						<h4 class="mg-md text-center titre-xs">
 							Création d'un site web pour photographes
-						</h3>
-						<p class="text-center">
+						</h4>
+						<p class="text-center  p-xs">
 							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 						</p>
 					</div>
@@ -198,10 +201,10 @@
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/voyageur.jpg" alt="Entreprise web design à Lyon création site web pour voyageur"
 								class="img-responsive portfolio-thumb" /></a>
-						<h3 class="mg-md text-center">
+						<h4 class="mg-md text-center titre-xs">
 							Création d'un site internet pour un voyageur
-						</h3>
-						<p class="text-center">
+						</h4>
+						<p class="text-center p-xs">
 							Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce
 							voyageur.
 						</p>
@@ -212,10 +215,10 @@
 								src="img/agence_de_mariage.jpg"
 								alt="Entreprise web design à Lyon création site web pour agence de mariage"
 								class="img-responsive portfolio-thumb" /></a>
-						<h3 class="mg-md text-center">
+						<h4 class="mg-md text-center titre-xs">
 							Conception d'un site pour une agence de mariage
-						</h3>
-						<p class="text-center">
+						</h4>
+						<p class="text-center p-xs">
 							Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de
 							leurs prestations.
 						</p>
@@ -227,12 +230,12 @@
 
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
-			<div class="container bloc-lg">
+			<div class="container bloc-lg opacity-bg">
 				<div class="row">
 					<h2 class="mg-md text-center tc-white">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
-					<div class="col-sm-12 text-center">
+					<div class="col-sm-12 text-center btn-contact">
 						<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
@@ -245,7 +248,7 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center black">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 					</div>
@@ -254,32 +257,32 @@
 					<div class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="https://twitter.com" aria-label="partager sur twitter"><span
-									class="fa fa-twitter icon-md"></span>
-								<p class="sr-hiden">Twitter</p>
+									class="fa fa-twitter icon-md white"></span>
+								<h3 class="sr-hiden black-footer">Twitter</h3>
 							</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="https://www.facebook.com" aria-label="partager sur facebook"><span
-									class="fa fa-facebook icon-md"></span>
-								<p class="sr-hiden">Facebook</p>
+									class="fa fa-facebook icon-md white"></span>
+								<h3 class="sr-hiden black-footer">Facebook</h3>
 							</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="https://dribbble.com" aria-label="partager sur dribbble"><span
-									class="fa fa-dribbble icon-md"></span>
-								<p class="sr-hiden">Dribbble</p>
+									class="fa fa-dribbble icon-md white"></span>
+								<h3 class="sr-hiden black-footer">Dribbble</h3>
 							</a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="https://www.instagram.com" aria-label="partager sur instagram"><span
-									class="fa fa-instagram icon-md"></span>
-								<p class="sr-hiden">Insagram</p>
+									class="fa fa-instagram icon-md white"></span>
+								<h3 class="sr-hiden black-footer">Insagram</h3>
 							</a>
 						</div>
 					</div>
