--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
 	<!-- <link rel="canonical" href="https://romimatei.github.io/RominaMatei_4_26032021/" /> -->
-	<link rel="preload" as="image" href="img/la-chouette-agence-banniere-xs.jpg">
-
+	<link rel="preload" as="image" href="img/la-chouette-agence-banniere.jpg">
 	<link rel="stylesheet" type="text/css" href="style.css">
 
 
@@ -83,7 +82,8 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<p class="titre">La chouette agence est une agence de web design qui aide les entreprises à devenir attrectives et visibles sur internet.</p>
+						<p class="titre">La chouette agence est une agence de web design qui aide les entreprises à devenir
+							attrectives et visibles sur internet.</p>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -126,11 +126,12 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-            <p class="titre"><em>"La chouette agence est une execellente agence web !
-							Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à
-						doubler nos ventes en ligne à Lyon."</em><br>
-					Maxime Guibard, PDG de À vos fourchettes
-				 </p>
+						<p class="titre"><em>"La chouette agence est une execellente agence web !
+								Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela
+								nous a aidé à
+								doubler nos ventes en ligne à Lyon."</em><br>
+							Maxime Guibard, PDG de À vos fourchettes
+						</p>
 					</div>
 				</div>
 			</div>
@@ -171,8 +172,8 @@
 				<div class="row portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/journal_local.jpg" data-gallery-id="gallery-1"
-							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/journal_local.jpg"
+							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+							<img src="img/journal_local.jpg" width="320" height="320"
 								alt="Entreprise web design logo agence web meilleure agence et refonte site web journal"
 								class="img-responsive portfolio-thumb" /></a>
 						<h4 class="mg-md text-center titre-xs">
@@ -184,8 +185,9 @@
 					</div>
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/photographes.jpg" data-gallery-id="gallery-1"
-							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
-								src="img/photographes.jpg" alt="Entreprise web design à Lyon création site web pour photographes"
+							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+							<img src="img/photographes.jpg" width="320" height="320"
+								alt="Entreprise web design à Lyon création site web pour photographes"
 								class="img-responsive portfolio-thumb" /></a>
 						<h4 class="mg-md text-center titre-xs">
 							Création d'un site web pour photographes
@@ -198,8 +200,9 @@
 				<div class="row portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/voyageur.jpg" data-gallery-id="gallery-1"
-							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/voyageur.jpg" alt="Entreprise web design à Lyon création site web pour voyageur"
+							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+							<img src="img/voyageur.jpg" width="320" height="320"
+								alt="Entreprise web design à Lyon création site web pour voyageur"
 								class="img-responsive portfolio-thumb" /></a>
 						<h4 class="mg-md text-center titre-xs">
 							Création d'un site internet pour un voyageur
@@ -211,8 +214,8 @@
 					</div>
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/agence_de_mariage.jpg" data-gallery-id="gallery-1"
-							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/agence_de_mariage.jpg"
+							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+							<img src="img/agence_de_mariage.jpg" width="320" height="320"
 								alt="Entreprise web design à Lyon création site web pour agence de mariage"
 								class="img-responsive portfolio-thumb" /></a>
 						<h4 class="mg-md text-center titre-xs">
@@ -242,6 +245,11 @@
 			</div>
 		</div>
 		<!-- bloc-5-cta END -->
+
+			<!-- ScrollToTop Button -->
+			<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span
+				class="fa fa-chevron-up"></span></a>
+		<!-- ScrollToTop Button END-->
 
 		<!-- Footer - bloc-8 -->
 		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
@@ -290,7 +298,6 @@
 			</div>
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 			<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-
 			<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 			<script src="./js/jquery-2.1.0.min.js"></script>
 			<script src="./js/bootstrap.min.js"></script>
