--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 		content="La chouette agence est une agence de web design qui aide les entreprises à devenir attrectives et visibles sur internet.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
-	<!-- <link rel="canonical" href="https://romimatei.github.io/RominaMatei_4_26032021/" /> -->
+	<link rel="canonical" href="https://romimatei.github.io/RominaMatei_4_26032021/" />
 	<link rel="preload" as="image" href="img/la-chouette-agence-banniere.jpg">
+	<link rel="preload" as="image" href="img/la-chouette-agence-banniere-xs.jpg">
 	<link rel="stylesheet" type="text/css" href="style.css">
 
-
 	<title>La chouette agence</title>
-	<meta name="google-site-verification" content="WqhW8sfMRLdmsS-fwkyKmWJVcj79AAEdW6eJZXZxPYs" />
 
 
 	<!-- Analytics -->
