add minified css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="canonical" href="https://romimatei.github.io/RominaMatei_4_26032021/" />
 	<link rel="preload" as="image" href="img/la-chouette-agence-banniere.jpg">
 	<link rel="preload" as="image" href="img/la-chouette-agence-banniere-xs.jpg">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="style.min.css">
 
 	<title>La chouette agence</title>
 
@@ -260,7 +260,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="row row-no-gutters social-footer">
+				<div class="row social-footer">
 					<div class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="https://twitter.com" aria-label="partager sur twitter"><span
@@ -289,12 +289,14 @@
 						<div class="text-center">
 							<a class="social" href="https://www.instagram.com" aria-label="partager sur instagram"><span
 									class="fa fa-instagram icon-md white"></span>
-								<h3 class="sr-hiden black-footer">Insagram</h3>
+								<h3 class="sr-hiden black-footer">Instagram</h3>
 							</a>
 						</div>
 					</div>
 				</div>
 			</div>
+
+
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 			<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 			<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
