--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 			<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 			<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-			<script src="./js/jquery-2.1.0.min.js"></script>
-			<script src="./js/bootstrap.min.js"></script>
-			<script src="./js/blocs.min.js"></script>
-			<script src="./js/jquery.touchSwipe.min.js" defer></script>
+			<script defer src="./js/jquery-2.1.0.min.js"></script>
+			<script  defer src="./js/bootstrap.min.js"></script>
+			<script  defer src="./js/blocs.min.js"></script>
+			<script  defer src="./js/jquery.touchSwipe.min.js" defer></script>
 		</footer>
 		<!-- Footer - bloc-8 END -->
 
